cmake_minimum_required(VERSION 3.12)
project(straustrup)

set(CMAKE_CXX_STANDARD 14)

add_executable(straustrup_4_1 src/4.1.cpp)
add_executable(straustrup_4_2 src/4.2.cpp src/4_2_extern.cpp)
add_executable(straustrup_4_3 src/4.3.cpp)
add_executable(straustrup_4_4 src/4.4.cpp)
add_executable(straustrup_4_5 src/4.5.cpp)
add_executable(straustrup_4_7 src/4.7.cpp)
add_executable(straustrup_5_0_0 src/5.0.0.cpp)
add_executable(straustrup_5_0_1 src/5.0.1.cpp)
add_executable(straustrup_5_0_2 src/5.0.2.cpp)
add_executable(straustrup_5_1 src/5.1.cpp)
add_executable(straustrup_5_2 src/5.2.cpp)
add_executable(straustrup_5_3 src/5.3.cpp)
