cmake_minimum_required(VERSION 3.12)
project(straustrup)

set(CMAKE_CXX_STANDARD 14)

add_executable(wr src/wr.cpp src/sawfly/time-converter/TimeConverter.cpp src/sawfly/date-time/DateTime.cpp src/sawfly/date-time/DateTime.h src/sawfly/date-time/Format.cpp src/sawfly/date-time/Format.h)
add_executable(straustrup_4_1 src/4.1.cpp)
add_executable(straustrup_4_2 src/4.2.cpp src/4_2_extern.cpp)
add_executable(straustrup_4_3 src/4.3.cpp)
add_executable(straustrup_4_4 src/4.4.cpp)
add_executable(straustrup_4_5 src/4.5.cpp)
add_executable(straustrup_4_7 src/4.7.cpp)
add_executable(straustrup_5_0_0 src/5.0.0.cpp)
add_executable(straustrup_5_0_1 src/5.0.1.cpp)
add_executable(straustrup_5_0_2 src/5.0.2.cpp)
add_executable(straustrup_5_1 src/5.1.cpp)
add_executable(straustrup_5_2 src/5.2.cpp)
add_executable(straustrup_5_3 src/5.3.cpp)
add_executable(straustrup_5_4 src/5.4.cpp)
add_executable(straustrup_5_5 src/5.5.cpp)
add_executable(straustrup_5_6 src/5.6.cpp)
add_executable(straustrup_5_7 src/5.7.cpp)
add_executable(straustrup_5_8 src/5.8.cpp)
add_executable(straustrup_5_9 src/5.9.cpp)
add_executable(straustrup_5_10 src/5.10.cpp)
add_executable(straustrup_5_11 src/5.11.cpp)
add_executable(straustrup_5_12 src/5.12.cpp)
add_executable(straustrup_5_13 src/5.13.cpp)
add_executable(straustrup_6_1 src/6.1.cpp)
add_executable(straustrup_6_2 src/6.2.cpp)
add_executable(straustrup_6_3 src/6.3.cpp)
